--- a/.gitignore
+++ b/.gitignore
@@ -48,11 +48,12 @@ tomcat
 # Maven
 target/
 
-# IntelliJ project files
+# IntelliJ
 *.iml
 *.iws
 *.ipr
 .idea/
+out/
 
 # eclipse project file
 .settings/
@@ -68,7 +69,6 @@ nbdist/
 nbactions.xml
 nb-configuration.xml
 
-
 # OS
 .DS_Store
 
@@ -77,3 +77,16 @@ nb-configuration.xml
 release.properties
 pom.xml.releaseBackup
 pom.xml.tag
+
+# Gradle
+.gradle
+build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
