clean the build
GitOrigin-RevId: 995ff8dbd826638c43eae0a435c3c31e4175fd6b

--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 allprojects {
     group 'com.wilmol'
     version = "1.0"
+}
 
+subprojects {
     apply plugin: 'java'
-    apply plugin: 'maven'
     apply plugin: 'jacoco'
 
     sourceCompatibility = 11.0
