--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ subprojects {
 
     test {
         useJUnitPlatform()
+        testLogging {
+            events "started", "passed", "skipped", "failed", "standardOut", "standardError"
+        }
     }
 
     jacocoTestReport {
