--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,15 @@
 allprojects {
+    apply plugin: 'java'
     group 'com.wilmol'
     version = "1.0"
+
+    clean {
+        // delete intellij build directories too
+        delete "out/"
+    }
 }
 
 subprojects {
-    apply plugin: 'java'
     apply plugin: 'jacoco'
 
     sourceCompatibility = 11.0
