--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,8 @@ subprojects {
         compileOnly 'org.projectlombok:lombok:1.18.6'
         annotationProcessor 'org.projectlombok:lombok:1.18.6'
 
+        implementation 'com.google.code.gson:gson:2.8.5'
+
         testCompile group: 'com.google.truth', name: 'truth', version: '0.45'
         testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.0-M1'
         testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.5.0-M1'
