--- a/build.gradle
+++ b/build.gradle
@@ -61,14 +61,8 @@ subprojects {
         implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
         implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
         implementation group: 'org.javatuples', name: 'javatuples', version: '1.2'
-        implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 
-        implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
-        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
-        
-        testImplementation (group: 'com.google.truth', name: 'truth', version: '0.45'){
-//            exclude group: 'org.hamcrest'
-        }
+        testImplementation group: 'com.google.truth', name: 'truth', version: '0.45'
         testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.5.0-RC1'
         testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.0-RC1'
     }
