--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,7 @@ subprojects {
 
     dependencies {
         testImplementation group: 'com.google.truth', name: 'truth', version: '0.45'
+        testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
         testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.5.0-RC1'
         testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.0-RC1'
     }
