--- a/hackerrank/build.gradle
+++ b/hackerrank/build.gradle
@@ -1,3 +1,5 @@
+sourceCompatibility = 1.8
+
 dependencies {
     implementation group: 'com.google.code.findbugs', name: 'annotations', version: '3.0.1'
 }
