--- a/build.gradle
+++ b/build.gradle
@@ -104,6 +104,7 @@ subprojects {
 
     dependencies {
         testImplementation group: 'com.google.truth', name: 'truth', version: '1.0'
+        testImplementation group: 'com.google.truth.extensions', name: 'truth-java8-extension', version: '1.0'
         testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
         testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.5.0-RC1'
         testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.0-RC1'
