cleanup dependencies and fix build and add flextrade comments to hackerrank challenge
GitOrigin-RevId: 466936c2cd203669af61207198ec86c2ff50e366

--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,19 @@
+import com.github.spotbugs.SpotBugsTask
+
 buildscript {
     repositories {
         maven {
             url 'https://plugins.gradle.org/m2/'
         }
-        maven {
-            url 'https://dl.bintray.com/kotlin/kotlin-dev'
-        }
     }
     dependencies {
         classpath 'com.diffplug.spotless:spotless-plugin-gradle:3.22.0'
         classpath 'gradle.plugin.com.github.spotbugs:spotbugs-gradle-plugin:1.6.8'
-        classpath 'org.jetbrains.intellij.plugins:inspection-plugin:0.3.2'
     }
 }
 
 allprojects {
-    group 'wilmol'
+    group 'com.wilmol'
     version = '1.0.0'
 
     repositories {
@@ -37,7 +35,6 @@ subprojects {
         }
     }
 
-    // Static analysis
     // Checkstyle (static analysis - code quality/style)
     apply plugin: 'checkstyle'
     checkstyle {
@@ -47,6 +44,7 @@ subprojects {
         maxWarnings = 0
         ignoreFailures = false
     }
+
     // SpotBugs (static analysis - find possible bugs, performance issues etc.)
     apply plugin: 'com.github.spotbugs'
     spotbugs {
@@ -55,35 +53,16 @@ subprojects {
         reportLevel = 'low'
         ignoreFailures = false
     }
-    tasks.withType(com.github.spotbugs.SpotBugsTask) {
+    tasks.withType(SpotBugsTask) {
         reports {
             html.enabled = true
             xml.enabled = false
         }
     }
-    // IDEA inspections (more static analysis - similar to checkstyle)
-    // TODO why does it spit out a bunch of warnings (Illegal reflective access... ???) and slow (but works??)
-//    apply plugin: 'org.jetbrains.intellij.inspections'
-//    inspections {
-//        toolVersion 'ideaIC:2019.1.4'
-//        errors.max = 0
-//        warnings.max = 0
-//        warning('FieldMayBeFinal')
-////        warning('ConstantOnWrongSideOfComparison')
-//        warning('EqualsCalledOnEnumConstant')
-//        warning('ClassWithMultipleLoggers')
-//        warning('LoggerInitializedWithForeignClass')
-//        warning('LoggingConditionDisagreesWithLogStatement')
-//        warning('MapReplaceableByEnumMap')
-//        warning('SetReplaceableByEnumSet')
-//        warning('SizeReplaceableByIsEmpty')
-//        warning('StringEqualsEmptyString')
-//        warning('ObsoleteCollection')
-//        warning('OptionalContainsCollection')
-//    }
 
     // Tests
     test {
+        // run tests in parallel, assumes they're threadsafe
         maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
         useJUnitPlatform()
         testLogging {
@@ -91,6 +70,7 @@ subprojects {
             events 'failed'
         }
     }
+
     // JaCoCo (code coverage reporting)
     apply plugin: 'jacoco'
     jacocoTestReport {
@@ -102,11 +82,35 @@ subprojects {
     }
     check.dependsOn jacocoTestReport
 
+    // dependency version numbers
+    ext {
+        junitVersion = '5.5.2'
+        truthVersion = '1.0'
+        mockitoVersion = '3.1.0'
+
+        guavaVersion = '28.1-jre'
+        log4jVersion = '2.12.1'
+        commonsLangVersion = '3.9'
+    }
+
+    // dependency cleanup, exclusions and resolutions
+    configurations.all {
+        exclude group: "org.assertj" // using truth instead
+
+        resolutionStrategy {
+            force "com.google.guava:guava:$guavaVersion" // so the android version isn't pulled in
+        }
+    }
+
     dependencies {
-        testImplementation group: 'com.google.truth', name: 'truth', version: '1.0'
-        testImplementation group: 'com.google.truth.extensions', name: 'truth-java8-extension', version: '1.0'
-        testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
-        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.5.0-RC1'
-        testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.0-RC1'
+        implementation "com.google.guava:guava:$guavaVersion"
+        implementation "org.apache.logging.log4j:log4j-core:$log4jVersion"
+        implementation 'com.google.code.findbugs:annotations:3.0.1'
+
+        testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+        testImplementation "com.google.truth:truth:$truthVersion"
+        testImplementation "com.google.truth.extensions:truth-java8-extension:$truthVersion"
+        testImplementation "org.mockito:mockito-core:$mockitoVersion"
     }
 }
