--- a/hackerrank/build.gradle
+++ b/hackerrank/build.gradle
@@ -1,5 +1,5 @@
 sourceCompatibility = 1.8
 
 dependencies {
-    implementation group: 'com.google.code.findbugs', name: 'annotations', version: '3.0.1'
+    implementation 'com.google.code.findbugs:annotations:3.0.1'
 }
