--- a/project-euler/build.gradle
+++ b/project-euler/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-    implementation group: 'com.google.code.findbugs', name: 'annotations', version: '3.0.1'
-    implementation group: 'com.google.guava', name: 'guava', version: '28.1-jre'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+    implementation 'com.google.code.findbugs:annotations:3.0.1'
+    implementation "com.google.guava:guava:$guavaVersion"
+    implementation "org.apache.logging.log4j:log4j-core:$log4jVersion"
+    implementation "org.apache.commons:commons-lang3:$commonsLangVersion"
 }
