--- a/build.gradle
+++ b/build.gradle
@@ -94,13 +94,15 @@ subprojects {
 
     // pin dependency versions
     ext {
-        junitVersion = '5.5.2'
-        truthVersion = '1.0.1'
-        mockitoVersion = '3.2.4'
-
+        // production
         guavaVersion = '28.2-jre'
         log4jVersion = '2.13.0'
         commonsLangVersion = '3.9'
+        // test
+        junitVersion = '5.6.0'
+        truthVersion = '1.0.1'
+        mockitoVersion = '3.2.4'
+        // plugins TODO pin gradle plugin versions
     }
 
     // dependency cleanup, exclusions and resolutions
