--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,6 @@
+logger.quiet "Running Java version: ${System.properties['java.version']}"
+logger.quiet "Running Gradle version: $gradle.gradleVersion"
+
 import com.github.spotbugs.SpotBugsTask
 
 buildscript {
