--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,6 @@
 name: Build
 
-on:
-  push:
-  pull_request:
-  schedule:
-    - cron: '0 0 * * *'
+on: [push, pull_request]
 
 jobs:
   run:
@@ -19,10 +15,17 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Restore build cache
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build
-        run: ./gradlew projects clean build jacocoTestReport --no-daemon --refresh-dependencies
+        run: ./gradlew projects build jacocoTestReport
       - name: Upload coverage to Codecov
         # https://github.com/codecov/codecov-action
         uses: codecov/codecov-action@v1
