Update codcov config
Change to post success status for all coverage ratios (i.e. even for
0%).

GitOrigin-RevId: 31716bdec93b51ed7ea2fab6c359aa17d59bb925

--- a/codecov.yml
+++ b/codecov.yml
@@ -5,9 +5,9 @@ coverage:
   status:
     project:
       default:
-        target: number
-        threshold: 70%
+        target: 0%
+        threshold: 100%
     patch:
       default:
-        target: number
-        threshold: 70%
+        target: 0%
+        threshold: 100%
