leetcode P1457PseudoPalindromicPathsInABinaryTree bitmask solution
Same overall idea, just uses bitmask rather than array as an
optimisation.

Also created testlib module for common junit helper code. Currently
contains a method for computing cartesian product of Arguments for use
in parameterised tests.

GitOrigin-RevId: 0e112715009dafffd20ab3d8aa7a7f0630ffeade

--- a/build.gradle
+++ b/build.gradle
@@ -139,5 +139,6 @@ subprojects {
         testImplementation "org.mockito:mockito-core:$mockitoVersion"
         testImplementation "org.mockito:mockito-junit-jupiter:$mockitoVersion"
         testImplementation "com.google.guava:guava-testlib:$guavaVersion"
+        testImplementation project(':testlib')
     }
 }
