--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,6 @@
 logger.quiet "Java version: ${System.properties['java.version']}"
 logger.quiet "Gradle version: $gradle.gradleVersion"
 
-import com.github.spotbugs.SpotBugsTask
-
 buildscript {
     repositories {
         maven {
@@ -11,9 +9,9 @@ buildscript {
     }
     dependencies {
         // TODO pin version numbers (with the others below)
-        classpath 'com.diffplug.spotless:spotless-plugin-gradle:4.0.1'
-        classpath 'gradle.plugin.com.github.spotbugs:spotbugs-gradle-plugin:2.0.0'
-        classpath "net.rdrei.android.buildtimetracker:gradle-plugin:0.11.+"
+        classpath 'com.diffplug.spotless:spotless-plugin-gradle:4.4.0'
+        classpath 'gradle.plugin.com.github.spotbugs.snom:spotbugs-gradle-plugin:4.4.2'
+        classpath 'net.rdrei.android.buildtimetracker:gradle-plugin:0.11.0'
     }
 }
 
@@ -31,7 +29,7 @@ buildtimetracker {
 }
 
 allprojects {
-    group 'wilmol'
+    group 'com.wilmol'
     version = '1.0.0'
     repositories {
         mavenCentral()
@@ -56,7 +54,7 @@ subprojects {
     apply plugin: 'checkstyle'
     checkstyle {
         toolVersion = '8.21'
-        configFile = rootProject.file('gradle/checkstyle/checkstyle.xml')
+        configFile = rootProject.file('./checkstyle.xml')
         maxErrors = 0
         maxWarnings = 0
         ignoreFailures = false
@@ -65,12 +63,11 @@ subprojects {
     // SpotBugs (static analysis - find possible bugs, performance issues etc.)
     apply plugin: 'com.github.spotbugs'
     spotbugs {
-        toolVersion = '3.1.12'
         effort = 'max'
         reportLevel = 'low'
         ignoreFailures = false
     }
-    tasks.withType(SpotBugsTask) {
+    tasks.withType(com.github.spotbugs.snom.SpotBugsTask) {
         reports {
             html.enabled = true
             xml.enabled = false
@@ -93,7 +90,11 @@ subprojects {
             // log the overall results (based on https://stackoverflow.com/a/36130467/6122976)
             afterSuite { desc, result ->
                 if (!desc.parent) { // will match the outermost suite
-                    println("Results: ${result.resultType} (${result.testCount} test${result.testCount > 1 ? "s" : ""}, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)")
+                    println("Results: ${result.resultType} " +
+                            "(${result.testCount} test${result.testCount > 1 ? "s" : ""}, " +
+                            "${result.successfulTestCount} passed, " +
+                            "${result.failedTestCount} failed, " +
+                            "${result.skippedTestCount} skipped)")
                 }
             }
         }
