--- a/build.gradle
+++ b/build.gradle
@@ -135,6 +135,8 @@ subprojects {
     }
 
     dependencies {
+        implementation group: 'com.github.spotbugs', name: 'spotbugs-annotations', version: '4.2.2'
+
         testImplementation "org.junit.jupiter:junit-jupiter:$junitVersion"
         testImplementation "com.google.truth:truth:$truthVersion"
         testImplementation "com.google.truth.extensions:truth-java8-extension:$truthVersion"
