Upgrade to Java 16 and Gradle 7 (#139)
Also replace Lombok with records.

GitOrigin-RevId: 5784a2481f76b453c71c0406fa034b8594bce25b

--- a/project-euler/build.gradle
+++ b/project-euler/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    implementation "com.google.guava:guava:$guavaVersion"
-    implementation "org.apache.logging.log4j:log4j-core:$log4jVersion"
-    implementation "org.apache.commons:commons-lang3:$commonsLangVersion"
+    implementation group: 'com.google.guava', name: 'guava', version: "$guavaVersion"
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: "$log4jVersion"
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: "$commonsLangVersion"
 }
