--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
-          distribution: adopt
-          java-version: 17
+          distribution: corretto
+          java-version: 21
 
       - name: Build
         run: |
