--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,16 +4,18 @@ spotbugs = { id = "com.github.spotbugs", version = "6.0.27" }
 buildtimetracker = { id = "com.asarkar.gradle.build-time-tracker", version = "4.3.0" }
 
 [versions]
-kotlin = "2.1.0"
-log4j = "2.24.3"
 spotbugs = "4.8.6"
 guava = "33.4.0-jre"
+log4j = "2.24.3"
 commons-lang = "3.17.0"
 jackson = "2.18.2"
 # test libs
 junit = "5.11.4"
 truth = "1.4.4"
 mockito = "5.14.2"
+# langs
+scala = "3.6.2"
+kotlin = "2.1.0"
 
 [libraries]
 spotbugs-annotations = { module = "com.github.spotbugs:spotbugs-annotations", version.ref = "spotbugs" }
@@ -29,3 +31,5 @@ truth = { module = "com.google.truth:truth", version.ref = "truth" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
 mockito-junit = { module = "org.mockito:mockito-junit-jupiter", version.ref = "mockito" }
 guava-testlib = { module = "com.google.guava:guava-testlib", version.ref = "guava" }
+# scala
+scala-library = { module = "org.scala-lang:scala3-library_3", version.ref = "scala" }
