--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,3 +33,4 @@ mockito-junit = { module = "org.mockito:mockito-junit-jupiter", version.ref = "m
 guava-testlib = { module = "com.google.guava:guava-testlib", version.ref = "guava" }
 # scala
 scala-library = { module = "org.scala-lang:scala3-library_3", version.ref = "scala" }
+scala-parallel-collections = { module = "org.scala-lang.modules:scala-parallel-collections_3", version = "1.2.0" }
