Update renovate config (copy template)
Should now get gradle updates.

GitOrigin-RevId: f42158378b3e57f8d90eafabe5db28edc1fdb471

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build
         run: |
           chmod +x gradlew
-          ./gradlew projects clean build jacocoTestReport --no-daemon --refresh-dependencies
+          ./gradlew projects clean build --no-daemon --refresh-dependencies
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
