Move companies under `companies/`
GitOrigin-RevId: 05f567f65d8fe92a8b891daa0cba5240e8d1b5f7

--- a/.gitignore
+++ b/.gitignore
@@ -45,8 +45,10 @@ Thumbs.db
 # Build output directies
 /target
 */target
+target
 /build
 */build
+build
 
 # IntelliJ specific files/directories
 out
