Add `setup-gradle` step and swap to `temurin` jdk
https://github.com/will-molloy/java-template/commit/8139e0a320593761611d5dc86f9ab0f2a8d54b81

GitOrigin-RevId: 8ad4b30e6c26d8dbd0808a3a30373e9a52b97968

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,13 +18,14 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
-          distribution: corretto
+          distribution: temurin
           java-version: 21
 
-      - name: Build
-        run: |
-          chmod +x gradlew
-          ./gradlew projects clean build --no-daemon --refresh-dependencies
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Build and test
+        run: ./gradlew build
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
