--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,4 @@
-# https://github.com/google/google-java-format/releases/tag/v1.10.0
-org.gradle.jvmargs=-Xmx2048M --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+org.gradle.jvmargs=-Xmx2048M
 
 # https://docs.gradle.org/current/userguide/performance.html
 org.gradle.parallel=true
