Optimise adventofcode 2025 Day 9: 3mins to 3secs
Bottleneck it turns out was NOT the area calcs, but the building of
`tiledRanges`. Previously O(rows * tiles) now O(tiles).

Parallelism improves it to 1sec only.

Make sure to measure the code and discover the bottleneck!

GitOrigin-RevId: 7ea818c51b4f481ac65c7bbd9638bfd25a24fcc3

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,3 +34,5 @@ guava-testlib = { module = "com.google.guava:guava-testlib", version.ref = "guav
 # scala
 scala-library = { module = "org.scala-lang:scala3-library_3", version.ref = "scala" }
 scala-parallel-collections = { module = "org.scala-lang.modules:scala-parallel-collections_3", version = "1.2.0" }
+# kotlin
+kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version = "1.10.1" }
